--- a/charuco_detector/CMakeLists.txt
+++ b/charuco_detector/CMakeLists.txt
@@ -5,12 +5,15 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+# Set C++ standard
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(rcl_interfaces REQUIRED)
+find_package(rclcpp_components REQUIRED)
 find_package(std_msgs REQUIRED)
-
 find_package(charuco_detector_interfaces REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(OpenCV REQUIRED)
@@ -19,141 +22,97 @@ find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(image_transport REQUIRED)
 find_package(tf2_ros REQUIRED)
-
+find_package(tf2_geometry_msgs REQUIRED)
 
 set(executable_name charuco_detector)
 set(library_name ${executable_name}_core)
 
-# Add the include directories
+# Include directories
 include_directories(
   include
-  ${rclcpp_INCLUDE_DIRS}
-  ${rcl_interfaces_INCLUDE_DIRS}
-  ${EIGEN3_INCLUDE_DIRS}
-  ${OpenCV_INCLUDE_DIRS}
-  ${cv_bridge_INCLUDE_DIRS}
-  ${catkin_INCLUDE_DIRS}
-  ${geometry_msgs_INCLUDE_DIRS}
-  ${sensor_msgs_INCLUDE_DIRS}
 )
 
-
-# add_executable(charuco_detector_node 
-#                 src/charuco_detector_node.cpp
-#                 include/charuco_detector/charuco_detector.h)
+# Library
 add_library(${library_name} SHARED
   src/charuco_detector.cpp
-  include/charuco_detector/charuco_detector.hpp
 )
-target_compile_features(${library_name} 
-  PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
+
+target_compile_features(${library_name} PUBLIC cxx_std_17)
+
 target_include_directories(${library_name} PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<BUILD_INTERFACE:${LIBMODBUS_PATH}/src>
-  $<BUILD_INTERFACE:${LIBMODBUS_PATH}>
   $<INSTALL_INTERFACE:include>
-  ${rclcpp_INCLUDE_DIRS})
-
+)
 
 ament_target_dependencies(${library_name}
-rclcpp 
-Eigen3 
-OpenCV 
-cv_bridge 
-std_msgs
-geometry_msgs
-sensor_msgs
-image_transport
-tf2_ros)
-
-
-ament_export_dependencies(rclcpp)
-install(
-  DIRECTORY include/${PROJECT_NAME}/
-  DESTINATION include/${PROJECT_NAME}/
+  rclcpp
+  std_msgs
+  geometry_msgs
+  sensor_msgs
+  cv_bridge
+  image_transport
+  tf2_ros
+  tf2_geometry_msgs
+  Eigen3
+  OpenCV
+  charuco_detector_interfaces
 )
-# add_library(charuco_detector_lib src/charuco_detector.cpp)
 
-
+# Executable
 add_executable(charuco_detector_node 
-                src/charuco_detector_node.cpp)
+  src/charuco_detector_node.cpp
+)
 
 target_link_libraries(charuco_detector_node
-                # charuco_detector
-                ${library_name}
-                ${Eigen_LIBS}
-                ${OpenCV_LIBS}
-                ${cv_bridge_LIBS}
-                ${image_transport_LIBS}
-                ${tf2_ros_LIBS}
-                ${charuco_detector_INCLUDE_DIRS}
-
+  ${library_name}
 )
-# Add any necessary dependencies
+
 ament_target_dependencies(charuco_detector_node
-${dependencies}
-rclcpp 
-Eigen3 
-OpenCV 
-cv_bridge 
-std_msgs
-geometry_msgs
-sensor_msgs
-image_transport
-tf2_ros)
+  rclcpp
+  charuco_detector_interfaces
+)
 
-  
-
-# target_include_directories(charuco_detector_node PUBLIC include)
-
-install(TARGETS ${library_name}
+# Install
+install(TARGETS
+  ${library_name}
+  charuco_detector_node
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
-  RUNTIME DESTINATION bin
+  RUNTIME DESTINATION lib/${PROJECT_NAME}
 )
 
-install(DIRECTORY include/
-  DESTINATION include/
-)
-# Install the executable
-install(TARGETS charuco_detector_node
-  DESTINATION lib/${PROJECT_NAME})
-
-
-install(DIRECTORY launch
-  DESTINATION share/${PROJECT_NAME})
-
-
-# Install package.xml
-install(FILES package.xml
-DESTINATION share/${PROJECT_NAME}
+install(DIRECTORY
+  include/
+  DESTINATION include
 )
 
-install(DIRECTORY launch config yaml DESTINATION share/${PROJECT_NAME}/)
+install(DIRECTORY
+  launch
+  config
+  yaml
+  scripts
+  DESTINATION share/${PROJECT_NAME}/
+)
+
+install(PROGRAMS
+  scripts/hand_eye_trans.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+install(FILES
+  package.xml
+  DESTINATION share/${PROJECT_NAME}
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
   set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-# ament_export_dependencies(rclcpp geometry_msgs)
-# ament_export_dependencies(rosidl_default_runtime)
-
-ament_export_include_directories(
-  include
-)
+ament_export_include_directories(include)
 ament_export_libraries(${library_name})
+ament_export_dependencies(rclcpp Eigen3 OpenCV cv_bridge)
 
-
-ament_export_dependencies(${dependencies})
-
-# Set C++ standard
-set(CMAKE_CXX_STANDARD 14)
 ament_package()
