--- a/charuco_detector_interfaces/package.xml
+++ b/charuco_detector_interfaces/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>charuco_detector_interfaces</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="iclab_luis@todo.todo">iclab_luis</maintainer>
-  <license>TODO: License declaration</license>
+  <description>Custom interfaces for charuco_detector package</description>
+  <maintainer email="your_email@example.com">user</maintainer>
+  <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
