Distintion between online and offline calibration

--- a/charuco_detector/CMakeLists.txt
+++ b/charuco_detector/CMakeLists.txt
@@ -5,7 +5,6 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -32,9 +31,9 @@ include_directories(
   include
 )
 
-# Library
+# Library para online detector
 add_library(${library_name} SHARED
-  src/charuco_detector.cpp
+  src/online_detector.cpp
 )
 
 target_compile_features(${library_name} PUBLIC cxx_std_17)
@@ -58,24 +57,54 @@ ament_target_dependencies(${library_name}
   charuco_detector_interfaces
 )
 
-# Executable
-add_executable(charuco_detector_node 
-  src/charuco_detector_node.cpp
+# Biblioteca para offline detector (sin ROS)
+add_library(offline_detector_lib STATIC
+  src/offline_detector.cpp
 )
 
-target_link_libraries(charuco_detector_node
+target_compile_features(offline_detector_lib PUBLIC cxx_std_17)
+target_include_directories(offline_detector_lib PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
+)
+
+target_link_libraries(offline_detector_lib
+  ${OpenCV_LIBS}
+)
+
+# MAIN INTELIGENTE (el ejecutable principal)
+add_executable(charuco_detector
+  src/charuco_detector_main.cpp
+)
+
+target_link_libraries(charuco_detector
   ${library_name}
+  offline_detector_lib
+  ${OpenCV_LIBS}
+  ${rclcpp_LIBRARIES}
 )
 
-ament_target_dependencies(charuco_detector_node
+ament_target_dependencies(charuco_detector
   rclcpp
+  OpenCV
   charuco_detector_interfaces
 )
 
-# Install
+# Mantener compatibilidad (opcional)
+add_executable(online_detector_node
+  src/online_detector_node.cpp
+)
+
+target_link_libraries(online_detector_node
+  ${library_name}
+)
+
+# Instalar todo
 install(TARGETS
   ${library_name}
-  charuco_detector_node
+  offline_detector_lib
+  charuco_detector
+  online_detector_node
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION lib/${PROJECT_NAME}
