Dependencies error fix

--- a/charuco_detector/CMakeLists.txt
+++ b/charuco_detector/CMakeLists.txt
@@ -11,7 +11,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(rclcpp_components REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(charuco_detector_interfaces REQUIRED)
 find_package(Eigen3 REQUIRED)
@@ -23,27 +22,27 @@ find_package(image_transport REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 
-set(executable_name charuco_detector)
-set(library_name ${executable_name}_core)
-
 # Include directories
 include_directories(
   include
+  ${EIGEN3_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
-# Library para online detector
-add_library(${library_name} SHARED
+# ===== ONLINE DETECTOR =====
+add_executable(online_detector_node
+  src/online_detector_node.cpp
   src/online_detector.cpp
 )
 
-target_compile_features(${library_name} PUBLIC cxx_std_17)
-
-target_include_directories(${library_name} PUBLIC
+target_include_directories(online_detector_node PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
+  ${EIGEN3_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
-ament_target_dependencies(${library_name}
+ament_target_dependencies(online_detector_node
   rclcpp
   std_msgs
   geometry_msgs
@@ -52,36 +51,50 @@ ament_target_dependencies(${library_name}
   image_transport
   tf2_ros
   tf2_geometry_msgs
-  Eigen3
   OpenCV
   charuco_detector_interfaces
 )
 
-# Biblioteca para offline detector (sin ROS)
-add_library(offline_detector_lib STATIC
+target_link_libraries(online_detector_node
+  ${OpenCV_LIBS}
+  ${EIGEN3_LIBRARIES}
+)
+
+# ===== OFFLINE DETECTOR =====
+add_executable(offline_detector_node
+  src/offline_detector_node.cpp
   src/offline_detector.cpp
 )
 
-target_compile_features(offline_detector_lib PUBLIC cxx_std_17)
-target_include_directories(offline_detector_lib PUBLIC
+target_include_directories(offline_detector_node PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
+  ${EIGEN3_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
-target_link_libraries(offline_detector_lib
+ament_target_dependencies(offline_detector_node
+  rclcpp
+  OpenCV
+)
+
+target_link_libraries(offline_detector_node
   ${OpenCV_LIBS}
+  ${EIGEN3_LIBRARIES}
 )
 
-# MAIN INTELIGENTE (el ejecutable principal)
+# ===== MAIN INTELIGENTE =====
 add_executable(charuco_detector
   src/charuco_detector_main.cpp
+  src/online_detector.cpp
+  src/offline_detector.cpp
 )
 
-target_link_libraries(charuco_detector
-  ${library_name}
-  offline_detector_lib
-  ${OpenCV_LIBS}
-  ${rclcpp_LIBRARIES}
+target_include_directories(charuco_detector PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
+  ${EIGEN3_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
 ament_target_dependencies(charuco_detector
@@ -90,24 +103,18 @@ ament_target_dependencies(charuco_detector
   charuco_detector_interfaces
 )
 
-# Mantener compatibilidad (opcional)
-add_executable(online_detector_node
-  src/online_detector_node.cpp
+target_link_libraries(charuco_detector
+  ${OpenCV_LIBS}
+  ${EIGEN3_LIBRARIES}
+  ${rclcpp_LIBRARIES}
 )
 
-target_link_libraries(online_detector_node
-  ${library_name}
-)
-
-# Instalar todo
+# Instalar todos los ejecutables
 install(TARGETS
-  ${library_name}
-  offline_detector_lib
-  charuco_detector
   online_detector_node
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION lib/${PROJECT_NAME}
+  offline_detector_node
+  charuco_detector
+  DESTINATION lib/${PROJECT_NAME}
 )
 
 install(DIRECTORY
@@ -139,9 +146,5 @@ if(BUILD_TESTING)
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
-
-ament_export_include_directories(include)
-ament_export_libraries(${library_name})
-ament_export_dependencies(rclcpp Eigen3 OpenCV cv_bridge)
 
 ament_package()
